--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dominio.ihelp10">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,55 +12,55 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IHelp10">
         <activity
-            android:name=".Case"
-            android:parentActivityName=".MyCases"
+            android:name=".vistas.Case"
+            android:parentActivityName=".vistas.MyCases"
             android:exported="false" />
         <activity
-            android:name=".Ticket"
-            android:parentActivityName=".ExpertStart"
+            android:name=".vistas.Ticket"
+            android:parentActivityName=".vistas.ExpertStart"
             android:exported="false" />
         <activity
-            android:name=".TicketsClosed"
-            android:parentActivityName=".ExpertStart"
+            android:name=".vistas.TicketsClosed"
+            android:parentActivityName=".vistas.ExpertStart"
             android:exported="false" />
         <activity
-            android:name=".UnassignedTickets"
-            android:parentActivityName=".ExpertStart"
+            android:name=".vistas.UnassignedTickets"
+            android:parentActivityName=".vistas.ExpertStart"
             android:exported="false" />
         <activity
-            android:name=".MyTickets"
-            android:parentActivityName=".ExpertStart"
+            android:name=".vistas.MyTickets"
+            android:parentActivityName=".vistas.ExpertStart"
             android:exported="false" />
         <activity
-            android:name=".CreateCase"
-            android:parentActivityName=".FrequentCases"
+            android:name=".vistas.CreateCase"
+            android:parentActivityName=".vistas.FrequentCases"
             android:exported="false" />
         <activity
-            android:name=".FrequentCases"
-            android:parentActivityName=".ClientStart"
+            android:name=".vistas.FrequentCases"
+            android:parentActivityName=".vistas.ClientStart"
             android:exported="false" />
         <activity
-            android:name=".MyCases"
-            android:parentActivityName=".ClientStart"
+            android:name=".vistas.MyCases"
+            android:parentActivityName=".vistas.ClientStart"
             android:exported="false" />
         <activity
-            android:name=".ExpertStart"
+            android:name=".vistas.ExpertStart"
             android:exported="false" />
         <activity
-            android:name=".ClientStart"
+            android:name=".vistas.ClientStart"
             android:exported="false" />
         <activity
-            android:name=".ForgotPassword"
+            android:name=".vistas.ForgotPassword"
             android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SingIn"
+            android:name=".vistas.SignIn"
             android:parentActivityName=".MainActivity"
             android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
